# ForgeDG

./: .env  .env.example  .gitignore  Dockerfile  LICENSE-ADDONS.txt  Makefile  OFFER.md  README.md  bootstrap.sh  cli.py  cli.py.bak  index.json  progress.yaml  projects.csv  pyproject.toml  setup.py  upgrade.sh
.github/workflows/: ci.yml  pipeline.yml
AEON/: core.manifest
BitMatrix/: README.md  package-lock.json  package.json
ClipIndex/: config.json
Dashboard/: index.html
api-black-box/: openapi.yaml
core-private/: setup.py
docs/: EULA.md  NDA.md  overview.md
forge_dg.egg-info/: SOURCES.txt  entry_points.txt
poc/: demo.sh
poc/.github/workflows/: ci.yml
projects/DemoApp/: cli.py  metadata.json
projects/DemoApp/FixApp/: metadata.json
projects/FinalApp/: metadata.json  results.xml
projects/FixApp/: metadata.json
projects/SampleApp/: metadata.json
projects/SampleApp/docs/: raport.md  specyfikacja.md
projects/TestApp/: metadata.json
sales/: webhook.js
site/: index.html
templates/commands/: dockerize.py  init-ci.py  init-legal.py  init-progress.py  init-sales.py  init-secrets.py  log-progress.py
tests/: test_my_module.py
web-demo/: index.html
white-label/: README.txt  setup.sh
white-label/api/: app.py  run.sh
